--- a/conf/base/parameters_feature_selection.yml
+++ b/conf/base/parameters_feature_selection.yml
@@ -5,10 +5,8 @@
 # Link: https://docs.kedro.org/en/0.19.5/configuration/parameters.html
 
 model_feature_selection:
-  inputs:
-    - X_train
-    - y_train
-    - parameters
-  outputs:
-    - selected_features
-    - feature_importance_plot
+  feature_selection: rfe
+  baseline_model_params:
+    n_estimators: 100
+    random_state: 42
+  n_features_to_select: 5
