--- a/mlruns/models/Random_forest/version-24/meta.yaml
+++ b/mlruns/models/Random_forest/version-24/meta.yaml
@@ -1,8 +1,8 @@
 aliases: []
 creation_timestamp: 1719741449411
 current_stage: None
-description: ''
-last_updated_timestamp: 1719741449411
+description: 'Accuracy: 0.8902439024390244'
+last_updated_timestamp: 1719758314654
 name: Random_forest
 run_id: b3ea94adcff24994ac77424b0b64f517
 run_link: ''
